--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 				<select name="figure" id="figure" class="btn btn-sm btn-primary">
 					<option value="line">Line</option>
 					<option value="circle">Circle</option>
+					<option value="semicircle">Semicircle</option>
 				</select>
 
 				<button id="clear" class="btn btn-sm btn-danger">Clear</button>
