--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 				</select>
 
 				<div class="d-flex gap-2">
+					<button id="grid" class="btn btn-sm btn-primary">Grid</button>
 					<button id="clear" class="btn btn-sm btn-danger">Clear</button>
 					<button id="export" class="btn btn-sm btn-secondary">Export</button>
 				</div>
