[00012] Rectangle Figure Added.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 					<option value="line">Line</option>
 					<option value="circle">Circle</option>
 					<option value="semicircle">Semicircle</option>
+					<option value="rectangle">Rectangle</option>
 				</select>
 
 				<div class="d-flex gap-2">
