[00013] Dot Figure Added.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 		<div class="h-100 d-flex flex-column gap-1">
 			<nav class="d-flex align-items-center justify-content-between p-3">
 				<select name="figure" id="figure" class="btn btn-sm btn-primary">
+					<option value="dot">Dot</option>
 					<option value="line">Line</option>
 					<option value="circle">Circle</option>
 					<option value="semicircle">Semicircle</option>
