--- a/index.html
+++ b/index.html
@@ -41,7 +41,19 @@
 				</select>
 
 				<div class="d-flex gap-2">
-					<button id="grid" class="btn btn-sm btn-primary">Grid</button>
+					<div class="input-group">
+						<input
+							min="20"
+							max="80"
+							step="10"
+							type="number"
+							id="grid-step"
+							placeholder="Grid Step"
+							class="form-control bg-dark border-0 text-light"
+						/>
+						<button id="grid" class="btn btn-sm btn-primary"><i class="fg-grid"></i></button>
+					</div>
+					<button id="snap" class="btn btn-sm btn-primary"><i class="fg-snap"></i></button>
 					<button id="clear" class="btn btn-sm btn-danger">Clear</button>
 					<button id="export" class="btn btn-sm btn-secondary">Export</button>
 				</div>
